make sure tooltip is properly aligned on first load

--- a/services/QuillProofreader/src/styles/edit.scss
+++ b/services/QuillProofreader/src/styles/edit.scss
@@ -120,10 +120,6 @@
       margin-right: 8px;
     }
 
-
-    &.invisible {
-      display: none;
-    }
     @media (max-width: 900px) {
       width: 230px;
       .top-section {
